--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -283,6 +283,15 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsection*{Art\'iculos de divulgaci\'on}
 
+\years{2023} Gerardo Martín. \textbf{Snakebites work like other diseases from wild animals}. \href{https://www.growkudos.com/publications/10.1371%25252Fjournal.pntd.0009867/reader}{\emph{Kudos}}. \\
+
+\years{2022} Gerardo Mart\'n. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{The Applied Ecologist}. \\
+
+\years{2021} Gerardo Martín and Kris Murray. \textbf{The eco-epidemiology of snakebite and the benefits of redefining as a zoonosis}. \href{https://www.londonntd.org/sites/lcntdr/files/content/attachments/2022-05-05/Innovative_research%202022.pdf} {\emph{London Centre for Neglected Tropical Disease Research}}. \\
+
+\years{2021} Gerardo Martín and Kris Murray. \textbf{Anticipating the impact of global change on snakebite envenoming}. \href{https://www.londonntd.org/sites/lcntdr/files/content/attachments/2022-05-05/Innovative_research%202022.pdf} {\emph{London Centre for Neglected Tropical Disease Research}}. \\
+
+
 \years{2021} Gerardo Mart\'in. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{\emph{The Applied Ecologist}}.\\
 
 \years{2020} Colin Simpfendorfer \& Gerardo Mart\'in. \textbf{Protected high-value reefs and movement pathways improve conservation of reef sharks}. \href{https://appliedecologistsblog.com/2020/07/30/protected-high-value-reefs-and-movement-pathways-improve-conservation-of-reef-sharks/}{\emph{The Applied Ecologist}}.\\
