--- a/publicaciones.Rmd
+++ b/publicaciones.Rmd
@@ -62,7 +62,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - **Gerardo Martín** (2023). **Snakebites work like other diseases from wild animals**. [Kudos](https://www.growkudos.com/publications/10.1371%25252Fjournal.pntd.0009867/reader).
 
-- **Gerardo Martín** (2022). **Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk**. [The Applied Ecoogist](https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/).
+- **Gerardo Martín** (2022). **Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk**. [The Applied Ecologist](https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/).
 
 - **Gerardo Martín** and Kris Murray (2022). **The eco-epidemiology of snakebite and the benefits of redefining as a zoonosis**. [*London Centre of for Tropical Disease Research*](pubs/Martin - Eco-snakebite.pdf)
 
