--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -283,9 +283,11 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsection*{Art\'iculos de divulgaci\'on}
 
+\years{2024} Gerardo Martín. \textbf{¿Por qué estudiar Ecología en la ENES unidad Mérida, UNAM?}. \href{https://www.lajornadamaya.mx/opinion/226078/por-que-estudiar-ecologia-en-la-enes-unidad-merida-unam}{\emph{La Jornada Maya}}\\
+
 \years{2023} Gerardo Martín. \textbf{Snakebites work like other diseases from wild animals}. \href{https://www.growkudos.com/publications/10.1371%25252Fjournal.pntd.0009867/reader}{\emph{Kudos}}. \\
 
-\years{2022} Gerardo Mart\'n. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{The Applied Ecologist}. \\
+\years{2022} Gerardo Mart\'in. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{The Applied Ecologist}. \\
 
 \years{2021} Gerardo Martín and Kris Murray. \textbf{The eco-epidemiology of snakebite and the benefits of redefining as a zoonosis}. \href{https://www.londonntd.org/sites/lcntdr/files/content/attachments/2022-05-05/Innovative_research%202022.pdf} {\emph{London Centre for Neglected Tropical Disease Research}}. \\
 
