--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -215,6 +215,8 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsection*{Art\'iculos en revistas arbitradas}
 
+\years{2024} \textbf{Gerardo Mart\'in}, Joseph James Erinjery, Dileepa Ediriweera, Eyal Goldstein, Ruchira Somaweera, H Janaka de Silva, David G Lalloo, Takuya Iwamura, Kris A Murray. Effects of global change on snakebite envenoming incidence up to 2050: a modelling assessment. \emph{The Lancet Planetary Health}. \url{https://www.thelancet.com/journals/lanplh/article/PIIS2542-5196(24)00141-4/fulltext}\\
+
 \years{2023} Eyal Goldstein, Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, H. Janaka de Silva, Peter J. Diggle, David G. Lalloo, Kris A. Murray \& Takuya Iwamura. Climate change maladaptation for health: Agricultural practice against shifting seasonal precipitation affects snakebite risk for rural farmers in the tropics. \emph{iScience}. ISSN: 2589-0042 \url{https://doi.org/10.1016/j.isci.2023.105946}.\\
 
 \years{2022} Jos\'e Mar\'ia Guti\'errez, Juliette Borri, Tamara Giles-Vernick, Romain Duda, Abdurazaq Habib, Anita Malhotra, \textbf{Gerardo Mart\'in}, Anna F. V. Pintor, Julien Potet, Terrence Scott, Isabelle Bolon, \& Rafael Ruiz Cata\~neda. Understanding and tackling snakebite envenoming with transdisciplinary research. \emph{PLoS Neglected Tropical Diseases}. ISSN: 1935-2735. \url{https://doi.org/10.1371/journal.pntd.0010897}. \\
