CV informe enero 2025

--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -149,7 +149,7 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 \item Nichos ecol\'ogicos fundamentales: supuestos estad\'isticos y alternativas geo-estad\'isticas para estimarlos
 \end{itemize}
 
-\years{2020} Profesor de asignaturas en la Facultad de Medicina Veterinaria y Zootecnia, Universidad Juárea del Estado de Durango:
+\years{2020} Profesor de asignaturas en la Facultad de Medicina Veterinaria y Zootecnia, Universidad Juárez del Estado de Durango:
 \begin{itemize}
  \item Estad\'istica 1
  \item Patolog\'ia general
@@ -172,6 +172,10 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 \subsection*{Experiencia docente}
 
 %\years{2022} Estancia de Investigación. Licenciatura en Manejo Sustentable de la Zona Costera. ENES M\'erida, UNAM.\\
+
+\years{2024} Modelos Matemáticos en Ecología I, Ecología de Poblaciones, Ecología Teórica I Y II. Licenciatura en Ecología, ENES Mérida, UNAM. Análisis y Modelado Espacial, Licenciatura en Ciencias Ambientales, ENES Mérida, UNAM.
+
+\years{2023} Modelos Matemáticos en Ecología I, Ecología de Poblaciones, Ecología Teórica I. Licenciatura en Ecología, ENES Mérida, UNAM. Desarrollo de Proyectos y Análisis y Modelado Espacial, Licenciatura en Ciencias Ambientales, ENES Mérida, UNAM.
 
 \years{2022} An\'alisis Multivariado. Licenciatura en Manejo Sustentable de Zonas Costeras. ENES M\'erida, UNAM.\\
 
@@ -263,15 +267,17 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsubsection*{Art\'iculos en revisión}
 
-\years{2022} Joseph J. Erinjery, Eyal Golstein, \textbf{Gerardo Mart\'in}, et al. \textbf{Land use change in Sri Lanka during the armed conflict}. \emph{Journal of Land Use Policy}. \\
+\years{2024} Alheli Flores-Ferrer, \textbf{Gerardo Martín}, Gerardo Suzán y Benjamin Roche. \textbf{Spatial modeling highlights species and location that increases the intensity of West Nile Virus transmission in the Yucatan peninsula in México}. \emph{Ecological Applications}.
+
+\years{2024} Anna Pintor, Kaushi Kanankege, Rafael Ruiz de Castañeda, Bethany Moos, Tamer Hasanein, Prashant Hedao, Kt Friar, Adam McKay, \textbf{Gerardo Martín}, Wolfgang Wüster, Mr Romulus Whitaker, Fernando Martinez-Freiria, Kate Jackson, Laurent Chirio, Matthew LeBreton, Abubakr Mohammad Abdalhalee, Ulrich Kuch, Deb Pandey, Chifundera Zacharie, Maria Elena Barragan-Paladines, Carlos Yañez Arenas, Masoud Yousefi, Patrick Malonza, Professor Mahmood Sasa, Zuhair Amr, Hammadi Achour, Anooshe Kafash, David Williams, Mike Turner. \textbf{Climate change induced complex shifts in snake distributions expose people to snakebite and threaten biodiversity}. \emph{Nature Communications}.
 
 \subsubsection*{Art\'iculos en preparaci\'on}
 
+\years{2024} \textbf{Gerardo Martín}, Tiffany Kosch y Sandra Castaño-Quitero. Predicting chytridiomycosis prevalence and amphibian extinction risk in Peru.
+
+\years{2022} Joseph J. Erinjery, Eyal Golstein, \textbf{Gerardo Mart\'in}, et al. \textbf{Land use change in Sri Lanka during the armed conflict}. \emph{Journal of Land Use Policy}. \\
+
 \years{2022} Josph J. Erinjery, \textbf{Gerardo Mart\'in}, Eyal Goldstei, Kris A. Murray \& Takuya Iwamura. \textbf{Population and climate change scenarios can lead to forest cover loss in Sri Lanka even under the current levels of forest protection}.\\
-
-\years{2022}  \textbf{Gerardo Mart\'in}, Joseph Erinjery, Eyal Goldstein, Takuya Iwamura \& Kris Murray. \textbf{Global change projections for snakebite incidence in South Asia: Conflicts between public health and conservation objectives}.\\
-
-\years{2022} 	Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, Eyal Goldstein, Kris Murray \& Takuya Iwamura. \textbf{Global change predictions based on socioeconomic pathways for Sri Lanka}.\\
 
 \subsubsection*{Investigaciones en curso}
 
