Medicina Cons y CV

--- a/cursos_lic.Rmd
+++ b/cursos_lic.Rmd
@@ -23,6 +23,8 @@ output: distill::distill_article
 
 - [Biogeografía y macroecología](https://gerardommc.github.io/Biogeo-Macroecologia/)
 
+- [Temas Selectos en Ecología: Parasitología y Medicina de la Conservación](https://gerardommc.github.io/Medicina-Cons/)
+
 # Licenciatura en Ciencias Ambientales
 - [Modelación matemática (Ciencias Ambientales, 2022-1)](https://gerardommc.github.io/Modelacion-matematica-CA/)
 
