--- a/docs/CV/cv-espanol.tex
+++ b/docs/CV/cv-espanol.tex
@@ -141,7 +141,7 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \section*{Experiencia profesional}
 
-\years{2021-} Profesor asociado C de tiempo completo. Escuela Nacional de Estudios Superiores unidad M\'erida.
+\years{2021-} Profesor asociado C de tiempo completo. Escuela Nacional de Estudios Superiores unidad M\'erida.\\
 
 \years{2020-2021} Investigador posdoctoral DGAPA\footnote{\url{https://dgapa.unam.mx/}}, Escuela Nacional de Estudios Superiores unidad M\'erida, Universidad Nacional Aut\'onoma de M\'exico. Proyecto: 
 
@@ -149,7 +149,7 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 \item Nichos ecol\'ogicos fundamentales: supuestos estad\'isticos y alternativas geo-estad\'isticas para estimarlos
 \end{itemize}
 
-\years{2020} Profesor de asignaturas en la Facultad de Medicina Veterinaria y Zootecnia, Universidad Juárea del Estado de Durango:
+\years{2020} Profesor de asignaturas en la Facultad de Medicina Veterinaria y Zootecnia, Universidad Juárez del Estado de Durango:
 \begin{itemize}
  \item Estad\'istica 1
  \item Patolog\'ia general
@@ -172,6 +172,26 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 \subsection*{Experiencia docente}
 
 %\years{2022} Estancia de Investigación. Licenciatura en Manejo Sustentable de la Zona Costera. ENES M\'erida, UNAM.\\
+
+\years{2024} Modelos Matemáticos en Ecología I, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2024} Ecología de Poblaciones, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2024} Ecologia Teórica I y II, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2024} Análisis y Modelado Espacial, ENES Mérida, UNAM. \\
+
+\years{2024} Modelado de Nichos Ecológicos y Áreas de Distribución, Posgrado en Ciencias del Mar y Limnología, UNAM (15 h). \\
+
+\years{2023} Modelos Matemáticos en Ecología I, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2023} Ecología de Poblaciones, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2023} Ecologia Teórica I y II, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2023} Modelado de Nichos Ecológicos y Áreas de Distribución, Posgrado en Ciencias del Mar y Limnología, UNAM (13 h). \\
+
+\years{2022} Temas Selectos: Modelación de Nichos Ecológicos con Patrones de Puntos. Posgrado en Ciencias Biológicas, UNAM.\\
 
 \years{2022} An\'alisis Multivariado. Licenciatura en Manejo Sustentable de Zonas Costeras. ENES M\'erida, UNAM.\\
 
@@ -203,6 +223,8 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 \section*{Proyectos, becas y reconocimientos}
 \noindent
 
+\years{2024-2025} Responsable de proyecto PAPIIT IA205824 \lq\lq Uso de procesos Cox log-Gaussianos para la predicción de impactos antropogénicos sobre organismos de la península de Yucatán\rq\rq. \\
+
 \years{2022-2023} Responsable de proyecto PAPIIT IA200822 \lq\lq Estimaci\'on estad\'istica de nichos ecol\'ogicos y aplicaciones ecol\'ogicas, salud p\'ublica y conservaci\'on\rq\rq. \\
 
 \years{2020-2021} Beca DGAPA para investigación posdoctoral en la Escuela Nacional de Estudios Superiores unidad Mérida, UNAM.\\
@@ -214,6 +236,8 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 \section*{Publicaciones y pl\'aticas}
 
 \subsection*{Art\'iculos en revistas arbitradas}
+
+\years{2024} \textbf{Gerardo Mart\'in}, Joseph James Erinjery, Dileepa Ediriweera, Eyal Goldstein, Ruchira Somaweera, H Janaka de Silva, David G Lalloo, Takuya Iwamura, Kris A Murray. Effects of global change on snakebite envenoming incidence up to 2050: a modelling assessment. \emph{The Lancet Planetary Health}. \url{https://www.thelancet.com/journals/lanplh/article/PIIS2542-5196(24)00141-4/fulltext}\\
 
 \years{2023} Eyal Goldstein, Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, H. Janaka de Silva, Peter J. Diggle, David G. Lalloo, Kris A. Murray \& Takuya Iwamura. Climate change maladaptation for health: Agricultural practice against shifting seasonal precipitation affects snakebite risk for rural farmers in the tropics. \emph{iScience}. ISSN: 2589-0042 \url{https://doi.org/10.1016/j.isci.2023.105946}.\\
 
@@ -261,15 +285,19 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsubsection*{Art\'iculos en revisión}
 
-\years{2022} Joseph J. Erinjery, Eyal Golstein, \textbf{Gerardo Mart\'in}, et al. \textbf{Land use change in Sri Lanka during the armed conflict}. \emph{Journal of Land Use Policy}. \\
+\years{2024} Alheli Flores-Ferrer, \textbf{Gerardo Martín}, Gerardo Suzán y Benjamin Roche. \textbf{Spatial modeling highlights species and location that increases the intensity of West Nile Virus transmission in the Yucatan peninsula in México}. \emph{Ecological Applications}. \\
+
+\years{2024} Anna Pintor, Kaushi Kanankege, Rafael Ruiz de Castañeda, Bethany Moos, Tamer Hasanein, Prashant Hedao, Kt Friar, Adam McKay, \textbf{Gerardo Martín}, Wolfgang Wüster, Mr Romulus Whitaker, Fernando Martinez-Freiria, Kate Jackson, Laurent Chirio, Matthew LeBreton, Abubakr Mohammad Abdalhalee, Ulrich Kuch, Deb Pandey, Chifundera Zacharie, Maria Elena Barragan-Paladines, Carlos Yañez Arenas, Masoud Yousefi, Patrick Malonza, Professor Mahmood Sasa, Zuhair Amr, Hammadi Achour, Anooshe Kafash, David Williams, Mike Turner. \textbf{Climate change induced complex shifts in snake distributions expose people to snakebite and threaten biodiversity}. \emph{Nature Communications}.
 
 \subsubsection*{Art\'iculos en preparaci\'on}
 
+\years{2025} Rodrigo Rangel Camacho, \textbf{Gerardo Martín}, Jean Philippe Chippaux y Carlos Yáñez Arenas. Impact of socioeconomic disparities and presence of certain snake species on snakebite incidence in Mexico (2018).\\
+
+\years{2024} \textbf{Gerardo Martín}, Tiffany Kosch y Sandra Castaño-Quitero. Predicting chytridiomycosis prevalence and amphibian extinction risk in Peru.\\
+
+\years{2022} Joseph J. Erinjery, Eyal Golstein, \textbf{Gerardo Mart\'in}, et al. \textbf{Land use change in Sri Lanka during the armed conflict}. \emph{Journal of Land Use Policy}. \\
+
 \years{2022} Josph J. Erinjery, \textbf{Gerardo Mart\'in}, Eyal Goldstei, Kris A. Murray \& Takuya Iwamura. \textbf{Population and climate change scenarios can lead to forest cover loss in Sri Lanka even under the current levels of forest protection}.\\
-
-\years{2022}  \textbf{Gerardo Mart\'in}, Joseph Erinjery, Eyal Goldstein, Takuya Iwamura \& Kris Murray. \textbf{Global change projections for snakebite incidence in South Asia: Conflicts between public health and conservation objectives}.\\
-
-\years{2022} 	Joseph J. Erinjery, \textbf{Gerardo Mart\'in}, Eyal Goldstein, Kris Murray \& Takuya Iwamura. \textbf{Global change predictions based on socioeconomic pathways for Sri Lanka}.\\
 
 \subsubsection*{Investigaciones en curso}
 
@@ -283,11 +311,15 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsection*{Art\'iculos de divulgaci\'on}
 
+\years{2024} Gerardo Martín. \textbf{Ecología, más allá de la teoría: acciones por Yucatán}. \href{https://www.lajornadamaya.mx/opinion/239885/ecologia-mas-alla-de-la-teoria-acciones-por-yucatan-enes-merida-licenciatura-en-ecologia?fbclid=IwZXh0bgNhZW0CMTEAAR2Hr0J4G5dg4AUF1my44-tFHsCSkOGubjrVqPHGqmGg9ilyM11NQyXEoYk_aem_z42Zb4dzd-X9Vj1vUxZpVw&sfnsn=scwspwa}{\emph{La Jornada Maya}}\\
+
 \years{2024} Gerardo Martín. \textbf{¿Por qué estudiar Ecología en la ENES unidad Mérida, UNAM?}. \href{https://www.lajornadamaya.mx/opinion/226078/por-que-estudiar-ecologia-en-la-enes-unidad-merida-unam}{\emph{La Jornada Maya}}\\
+
+
 
 \years{2023} Gerardo Martín. \textbf{Snakebites work like other diseases from wild animals}. \href{https://www.growkudos.com/publications/10.1371%25252Fjournal.pntd.0009867/reader}{\emph{Kudos}}. \\
 
-\years{2022} Gerardo Mart\'in. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{The Applied Ecologist}. \\
+\years{2022} Gerardo Mart\'in. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{\emph{The Applied Ecologist}}. \\
 
 \years{2021} Gerardo Martín and Kris Murray. \textbf{The eco-epidemiology of snakebite and the benefits of redefining as a zoonosis}. \href{https://www.londonntd.org/sites/lcntdr/files/content/attachments/2022-05-05/Innovative_research%202022.pdf} {\emph{London Centre for Neglected Tropical Disease Research}}. \\
 
