--- a/CV/cv-espanol.tex
+++ b/CV/cv-espanol.tex
@@ -141,7 +141,7 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \section*{Experiencia profesional}
 
-\years{2021-} Profesor asociado C de tiempo completo. Escuela Nacional de Estudios Superiores unidad M\'erida.
+\years{2021-} Profesor asociado C de tiempo completo. Escuela Nacional de Estudios Superiores unidad M\'erida.\\
 
 \years{2020-2021} Investigador posdoctoral DGAPA\footnote{\url{https://dgapa.unam.mx/}}, Escuela Nacional de Estudios Superiores unidad M\'erida, Universidad Nacional Aut\'onoma de M\'exico. Proyecto: 
 
@@ -173,9 +173,25 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 %\years{2022} Estancia de Investigación. Licenciatura en Manejo Sustentable de la Zona Costera. ENES M\'erida, UNAM.\\
 
-\years{2024} Modelos Matemáticos en Ecología I, Ecología de Poblaciones, Ecología Teórica I Y II. Licenciatura en Ecología, ENES Mérida, UNAM. Análisis y Modelado Espacial, Licenciatura en Ciencias Ambientales, ENES Mérida, UNAM.
+\years{2024} Modelos Matemáticos en Ecología I, Licenciatura en Ecología, ENES Mérida, UNAM. \\
 
-\years{2023} Modelos Matemáticos en Ecología I, Ecología de Poblaciones, Ecología Teórica I. Licenciatura en Ecología, ENES Mérida, UNAM. Desarrollo de Proyectos y Análisis y Modelado Espacial, Licenciatura en Ciencias Ambientales, ENES Mérida, UNAM.
+\years{2024} Ecología de Poblaciones, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2024} Ecologia Teórica I y II, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2024} Análisis y Modelado Espacial, ENES Mérida, UNAM. \\
+
+\years{2024} Modelado de Nichos Ecológicos y Áreas de Distribución, Posgrado en Ciencias del Mar y Limnología, UNAM (15 h). \\
+
+\years{2023} Modelos Matemáticos en Ecología I, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2023} Ecología de Poblaciones, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2023} Ecologia Teórica I y II, Licenciatura en Ecología, ENES Mérida, UNAM. \\
+
+\years{2023} Modelado de Nichos Ecológicos y Áreas de Distribución, Posgrado en Ciencias del Mar y Limnología, UNAM (13 h). \\
+
+\years{2022} Temas Selectos: Modelación de Nichos Ecológicos con Patrones de Puntos. Posgrado en Ciencias Biológicas, UNAM.\\
 
 \years{2022} An\'alisis Multivariado. Licenciatura en Manejo Sustentable de Zonas Costeras. ENES M\'erida, UNAM.\\
 
@@ -206,6 +222,8 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 %\hrule
 \section*{Proyectos, becas y reconocimientos}
 \noindent
+
+\years{2024-2025} Responsable de proyecto PAPIIT IA205824 \lq\lq Uso de procesos Cox log-Gaussianos para la predicción de impactos antropogénicos sobre organismos de la península de Yucatán\rq\rq. \\
 
 \years{2022-2023} Responsable de proyecto PAPIIT IA200822 \lq\lq Estimaci\'on estad\'istica de nichos ecol\'ogicos y aplicaciones ecol\'ogicas, salud p\'ublica y conservaci\'on\rq\rq. \\
 
@@ -267,13 +285,15 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsubsection*{Art\'iculos en revisión}
 
-\years{2024} Alheli Flores-Ferrer, \textbf{Gerardo Martín}, Gerardo Suzán y Benjamin Roche. \textbf{Spatial modeling highlights species and location that increases the intensity of West Nile Virus transmission in the Yucatan peninsula in México}. \emph{Ecological Applications}.
+\years{2024} Alheli Flores-Ferrer, \textbf{Gerardo Martín}, Gerardo Suzán y Benjamin Roche. \textbf{Spatial modeling highlights species and location that increases the intensity of West Nile Virus transmission in the Yucatan peninsula in México}. \emph{Ecological Applications}. \\
 
 \years{2024} Anna Pintor, Kaushi Kanankege, Rafael Ruiz de Castañeda, Bethany Moos, Tamer Hasanein, Prashant Hedao, Kt Friar, Adam McKay, \textbf{Gerardo Martín}, Wolfgang Wüster, Mr Romulus Whitaker, Fernando Martinez-Freiria, Kate Jackson, Laurent Chirio, Matthew LeBreton, Abubakr Mohammad Abdalhalee, Ulrich Kuch, Deb Pandey, Chifundera Zacharie, Maria Elena Barragan-Paladines, Carlos Yañez Arenas, Masoud Yousefi, Patrick Malonza, Professor Mahmood Sasa, Zuhair Amr, Hammadi Achour, Anooshe Kafash, David Williams, Mike Turner. \textbf{Climate change induced complex shifts in snake distributions expose people to snakebite and threaten biodiversity}. \emph{Nature Communications}.
 
 \subsubsection*{Art\'iculos en preparaci\'on}
 
-\years{2024} \textbf{Gerardo Martín}, Tiffany Kosch y Sandra Castaño-Quitero. Predicting chytridiomycosis prevalence and amphibian extinction risk in Peru.
+\years{2025} Rodrigo Rangel Camacho, \textbf{Gerardo Martín}, Jean Philippe Chippaux y Carlos Yáñez Arenas. Impact of socioeconomic disparities and presence of certain snake species on snakebite incidence in Mexico (2018).\\
+
+\years{2024} \textbf{Gerardo Martín}, Tiffany Kosch y Sandra Castaño-Quitero. Predicting chytridiomycosis prevalence and amphibian extinction risk in Peru.\\
 
 \years{2022} Joseph J. Erinjery, Eyal Golstein, \textbf{Gerardo Mart\'in}, et al. \textbf{Land use change in Sri Lanka during the armed conflict}. \emph{Journal of Land Use Policy}. \\
 
@@ -291,11 +311,15 @@ Modelado espacial de procesos ecol\'ogicos y transmisi\'on de enfermedades $ \bu
 
 \subsection*{Art\'iculos de divulgaci\'on}
 
+\years{2024} Gerardo Martín. \textbf{Ecología, más allá de la teoría: acciones por Yucatán}. \href{https://www.lajornadamaya.mx/opinion/239885/ecologia-mas-alla-de-la-teoria-acciones-por-yucatan-enes-merida-licenciatura-en-ecologia?fbclid=IwZXh0bgNhZW0CMTEAAR2Hr0J4G5dg4AUF1my44-tFHsCSkOGubjrVqPHGqmGg9ilyM11NQyXEoYk_aem_z42Zb4dzd-X9Vj1vUxZpVw&sfnsn=scwspwa}{\emph{La Jornada Maya}}\\
+
 \years{2024} Gerardo Martín. \textbf{¿Por qué estudiar Ecología en la ENES unidad Mérida, UNAM?}. \href{https://www.lajornadamaya.mx/opinion/226078/por-que-estudiar-ecologia-en-la-enes-unidad-merida-unam}{\emph{La Jornada Maya}}\\
+
+
 
 \years{2023} Gerardo Martín. \textbf{Snakebites work like other diseases from wild animals}. \href{https://www.growkudos.com/publications/10.1371%25252Fjournal.pntd.0009867/reader}{\emph{Kudos}}. \\
 
-\years{2022} Gerardo Mart\'in. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{The Applied Ecologist}. \\
+\years{2022} Gerardo Mart\'in. \textbf{Integrating snake distribution, abundance and expert-derived behavioural traits to predict snakebite risk}. \href{https://appliedecologistsblog.com/2021/12/27/integrating-snake-distribution-abundance-and-expert-derived-behavioural-traits-to-predict-snakebite-risk/}{\emph{The Applied Ecologist}}. \\
 
 \years{2021} Gerardo Martín and Kris Murray. \textbf{The eco-epidemiology of snakebite and the benefits of redefining as a zoonosis}. \href{https://www.londonntd.org/sites/lcntdr/files/content/attachments/2022-05-05/Innovative_research%202022.pdf} {\emph{London Centre for Neglected Tropical Disease Research}}. \\
 
